fix keycharts alignments

--- a/app/views/styles/vis.styl
+++ b/app/views/styles/vis.styl
@@ -78,12 +78,18 @@
   height 25px
   background #333
   color #eee
-  font-size 16px
   position absolute
   bottom 0px
+  .left
+    float left
+    width 48%
+  .right
+    float right
+    width 48%
   .chart
     display inline-block
-    width 100px
+    width 33%
+    font-size 16px
     text-align center
     &.gutter
       color #333
